test/deprecated/parenful/not-procedure.good
not-procedure.chpl:2: error: the '@deprecated' attribute with 'parenless=true' can only be applied to parenless procedures
