test/deprecated/parenful/not-procedure.chpl
@deprecated(notes="the parenful version of function f() is deprecated", parenless=true)
var f = 0;
var x = f;
